--- a/index.html
+++ b/index.html
@@ -9,18 +9,25 @@
     <link rel='bootstrap' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'/>
 </head>
 <body>
+    <div class='row'>
+            <nav class='col-sm-4'>
+                <a href='/Users/caitlinstansfield/Northcoders/precourse-section-3/index.html'>home.</a>
+                <a href='/Users/caitlinstansfield/Northcoders/precourse-section-3/links.html'>links.</a>
+                <a href='/Users/caitlinstansfield/Northcoders/precourse-section-3/contact.html'>contact.</a>
+            </nav>
+    </div>
     <header class='container'>
-         <section class="jumbotron">
-            <div class="container">
-                <div class="row text-center">
+         <section class='jumbotron'>
+            <div class='container'>
+                <div class='row text-center'>
                     <h1>pluviambulist.</h1>
                 </div>
             </div>
           </section>
     </header>
 
-    <div>
-            <h4>Wandering around Ancoats</h4>
+    <div id='main'>
+            <h3>Wandering around Ancoats</h4>
             <p>
                 Heritage open days are a brilliant way to reignite your urge to 
                 explore your own city. Investigating buildings that are usually 
@@ -29,7 +36,7 @@
                 with it in the first place. Having been off sunning myself for most 
                 of the events, I was determined to make the most of the Sunday I 
                 had remaining before I got caught up in the drudgery of the nine to 
-                five again.'
+                five again.
             </p>
             <p>
                 We start in the Portico Library, the entrance to which is tucked 
@@ -96,8 +103,8 @@
               </p>
             </div>
     </div>
-    <div>
-        <h4>Wandering around Ancoats</h4>
+    <div id='main'>
+        <h3>Wandering around Ancoats</h4>
         <p>
             Heritage open days are a brilliant way to reignite your urge to 
             explore your own city. Investigating buildings that are usually 
