--- a/index.html
+++ b/index.html
@@ -8,103 +8,27 @@
     <link rel='stylesheet' href='css/main.css'>
     <link rel='bootstrap' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'/>
 </head>
+
+
 <body>
+  
+  <header class='container'>  
     <div class='row'>
-            <nav class='col-sm-4'>
+            <h1 class='col-sm-4'>pluviambulist.</h1>
+            <nav class='col-sm-9'>
                 <a href='/Users/caitlinstansfield/Northcoders/precourse-section-3/index.html'>home.</a>
                 <a href='/Users/caitlinstansfield/Northcoders/precourse-section-3/links.html'>links.</a>
                 <a href='/Users/caitlinstansfield/Northcoders/precourse-section-3/contact.html'>contact.</a>
             </nav>
     </div>
-    <header class='container'>
-         <section class='jumbotron'>
-            <div class='container'>
-                <div class='row text-center'>
-                    <h1>pluviambulist.</h1>
-                </div>
-            </div>
-          </section>
-    </header>
+  </header>
 
-    <div id='main'>
-            <h3>Wandering around Ancoats</h4>
-            <p>
-                Heritage open days are a brilliant way to reignite your urge to 
-                explore your own city. Investigating buildings that are usually 
-                off limits and hearing history that you’ve heard a thousand times 
-                before from a new perspective can remind you why you fell in love 
-                with it in the first place. Having been off sunning myself for most 
-                of the events, I was determined to make the most of the Sunday I 
-                had remaining before I got caught up in the drudgery of the nine to 
-                five again.
-            </p>
-            <p>
-                We start in the Portico Library, the entrance to which is tucked 
-                down the side of a pub, with tempting smells drifting over from 
-                China Town. Resisting the urge to skip off for some spring onion 
-                pancakes, we ring the bell and wait. After the ominous buzz 
-                granting us entry and the climb up the staircase (there may have 
-                been a rest stop or two involved) we surface into a beautifully 
-                bright room, filled to the ceiling with books. If you’ve ever 
-                asked me what my goal in life is, you will know that high up the 
-                list is having a towering library in my house with a ladder that 
-                swings around it. This comes pretty close to that dream. The 
-                shelves are stacked high with ‘Polite Literature’ and there are 
-                cosy reading nooks nestled in the corners, which beg you to come 
-                and curl up and stay there for hours, immersed in another world. 
-                Sadly, it’s missing some of the indefinable magic it should hold, 
-                and I think it must be due to the lack of the ever-reassuring 
-                smell of old books. I’ll have to keep looking for my library 
-                inspiration.
-            </p>
-            <!--<img id='portico' src="images/Portico Library.jpg" alt="Portico Library">-->
-            <p>
-                With that in mind, the next item on the itinerary is Chetham’s 
-                Library. Ah. Closed. This puts a bit of a hitch in our plans 
-                because we are not sensible enough to arrange back-ups and our 
-                next stop isn’t until much later. After looking at each other 
-                blinking and nonplussed for a few minutes, we decide to while 
-                away some time with a few gin and tonics in The Gas Lamp to 
-                bolster our moods. Housed in a cellar of the Victorian children’s 
-                mission, this bar is one of my favourite in Manchester. The 
-                tiled walls are sparsely decorated, and provided it’s not a 
-                Friday or Saturday night, it’s usually quiet. Being able to 
-                get a seat and not having to scream myself hoarse are two of 
-                my prerequisites for a good drinking den.
-            </p>
-            <p>
-                Re-fueled, we head up to the Crown and Kettle. It’s the sort of 
-                pub in which the city centre is sadly lacking; relaxed, cosy, 
-                with a good selection and an adorable dog ambling around looking 
-                for attention. This is the starting point of a walking tour 
-                around old pubs and mills in Ancoats, hosted by the North 
-                Manchester branch of CAMRA.
-            </p>
-            <!--<img id='terraces' src="images/Ancoats Terraces.jpg" alt="Ancoats Terraces">-->
-            <div class = 'end'>
-              <p>
-                  The Portico Library is members only, but the gallery is open to 
-                  the public most of the time. Best to check their 
-                  <a href="http://www.theportico.org.uk/visit-us">website</a> 
-                  and maybe call ahead if you are planning to visit.
-              </p>
-              <p>
-                  Chetham’s Library is 
-                  <a href="http://library.chethams.com/about/visiting/">open</a> 
-                  to the public year round. Hopefully 
-                  your trip will be more successful than ours.
-              </p>
-              <p>
-                  CAMRA are running what looks to be an excellent tour around 
-                  breweries in Salford this Saturday, check their
-                  <a href="https://www.salford.camra.org.uk/">website</a>
-                  for more details. Tickets are £5 and do 
-                  not include the price of drinks.
-              </p>
-            </div>
-    </div>
-    <div id='main'>
-        <h3>Wandering around Ancoats</h4>
+    
+  <section class='jumbotron'></section>
+    
+   <div class='bulk'>
+    <section class='container'>
+        <h3>wandering around ancoats.</h4>
         <p>
             Heritage open days are a brilliant way to reignite your urge to 
             explore your own city. Investigating buildings that are usually 
@@ -134,7 +58,7 @@
             smell of old books. I’ll have to keep looking for my library 
             inspiration.
         </p>
-        <!--<img id='portico' src="images/Portico Library.jpg" alt="Portico Library">-->
+        <img src="images/Portico Library.jpg" alt="Portico Library">
         <p>
             With that in mind, the next item on the itinerary is Chetham’s 
             Library. Ah. Closed. This puts a bit of a hitch in our plans 
@@ -157,7 +81,7 @@
             around old pubs and mills in Ancoats, hosted by the North 
             Manchester branch of CAMRA.
         </p>
-        <!--<img id='terraces' src="images/Ancoats Terraces.jpg" alt="Ancoats Terraces">-->
+        <img id='terraces' src="images/Ancoats Terraces.jpg" alt="Ancoats Terraces">
         <div class = 'end'>
           <p>
               The Portico Library is members only, but the gallery is open to 
