Finished home page

--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
   <header class='container'>  
     <div class='row'>
             <h1 class='col-sm-4'>pluviambulist.</h1>
-            <nav class='col-sm-9'>
+            <nav class='col-sm-4'>
                 <a href='/Users/caitlinstansfield/Northcoders/precourse-section-3/index.html'>home.</a>
-                <a href='/Users/caitlinstansfield/Northcoders/precourse-section-3/links.html'>links.</a>
                 <a href='/Users/caitlinstansfield/Northcoders/precourse-section-3/contact.html'>contact.</a>
             </nav>
     </div>
@@ -28,81 +27,68 @@
     
    <div class='bulk'>
     <section class='container'>
-        <h3>wandering around ancoats.</h4>
+        <h3>wandering around ancoats.</h3>
         <p>
-            Heritage open days are a brilliant way to reignite your urge to 
-            explore your own city. Investigating buildings that are usually 
-            off limits and hearing history that you’ve heard a thousand times 
-            before from a new perspective can remind you why you fell in love 
-            with it in the first place. Having been off sunning myself for most 
-            of the events, I was determined to make the most of the Sunday I 
-            had remaining before I got caught up in the drudgery of the nine to 
-            five again.'
+            Heritage open days are a brilliant way to reignite your urge to explore your own city. Investigating buildings that are usually off limits and hearing history that you’ve heard a thousand times before from a new perspective can remind you why you fell in love with it in the first place. Having been off sunning myself for most of the events, I was determined to make the most of the Sunday I had remaining before I got caught up in the drudgery of the nine to five again.'
         </p>
         <p>
-            We start in the Portico Library, the entrance to which is tucked 
-            down the side of a pub, with tempting smells drifting over from 
-            China Town. Resisting the urge to skip off for some spring onion 
-            pancakes, we ring the bell and wait. After the ominous buzz 
-            granting us entry and the climb up the staircase (there may have 
-            been a rest stop or two involved) we surface into a beautifully 
-            bright room, filled to the ceiling with books. If you’ve ever 
-            asked me what my goal in life is, you will know that high up the 
-            list is having a towering library in my house with a ladder that 
-            swings around it. This comes pretty close to that dream. The 
-            shelves are stacked high with ‘Polite Literature’ and there are 
-            cosy reading nooks nestled in the corners, which beg you to come 
-            and curl up and stay there for hours, immersed in another world. 
-            Sadly, it’s missing some of the indefinable magic it should hold, 
-            and I think it must be due to the lack of the ever-reassuring 
-            smell of old books. I’ll have to keep looking for my library 
-            inspiration.
+            We start in the Portico Library, the entrance to which is tucked down the side of a pub, with tempting smells drifting over from China Town. Resisting the urge to skip off for some spring onion pancakes, we ring the bell and wait. After the ominous buzz granting us entry and the climb up the staircase (there may have been a rest stop or two involved) we surface into a beautifully bright room, filled to the ceiling with books. If you’ve ever asked me what my goal in life is, you will know that high up the list is having a towering library in my house with a ladder that swings around it. This comes pretty close to that dream. The shelves are stacked high with ‘Polite Literature’ and there are cosy reading nooks nestled in the corners, which beg you to come and curl up and stay there for hours, immersed in another world. Sadly, it’s missing some of the indefinable magic it should hold, and I think it must be due to the lack of the ever-reassuring smell of old books. I’ll have to keep looking for my library inspiration.
         </p>
         <img src="images/Portico Library.jpg" alt="Portico Library">
         <p>
-            With that in mind, the next item on the itinerary is Chetham’s 
-            Library. Ah. Closed. This puts a bit of a hitch in our plans 
-            because we are not sensible enough to arrange back-ups and our 
-            next stop isn’t until much later. After looking at each other 
-            blinking and nonplussed for a few minutes, we decide to while 
-            away some time with a few gin and tonics in The Gas Lamp to 
-            bolster our moods. Housed in a cellar of the Victorian children’s 
-            mission, this bar is one of my favourite in Manchester. The 
-            tiled walls are sparsely decorated, and provided it’s not a 
-            Friday or Saturday night, it’s usually quiet. Being able to 
-            get a seat and not having to scream myself hoarse are two of 
-            my prerequisites for a good drinking den.
+            With that in mind, the next item on the itinerary is Chetham’s Library. Ah. Closed. This puts a bit of a hitch in our plans because we are not sensible enough to arrange back-ups and our next stop isn’t until much later. After looking at each other blinking and nonplussed for a few minutes, we decide to while away some time with a few gin and tonics in The Gas Lamp to bolster our moods. Housed in a cellar of the Victorian children’s mission, this bar is one of my favourite in Manchester. The tiled walls are sparsely decorated, and provided it’s not a Friday or Saturday night, it’s usually quiet. Being able to get a seat and not having to scream myself hoarse are two of my prerequisites for a good drinking den.
         </p>
         <p>
-            Re-fueled, we head up to the Crown and Kettle. It’s the sort of 
-            pub in which the city centre is sadly lacking; relaxed, cosy, 
-            with a good selection and an adorable dog ambling around looking 
-            for attention. This is the starting point of a walking tour 
-            around old pubs and mills in Ancoats, hosted by the North 
-            Manchester branch of CAMRA.
+            Re-fueled, we head up to the Crown and Kettle. It’s the sort of pub in which the city centre is sadly lacking; relaxed, cosy, with a good selection and an adorable dog ambling around looking for attention. This is the starting point of a walking tour around old pubs and mills in Ancoats, hosted by the North Manchester branch of CAMRA.
         </p>
-        <img id='terraces' src="images/Ancoats Terraces.jpg" alt="Ancoats Terraces">
+        <img src="images/Ancoats Terraces.jpg" alt="Ancoats Terraces">
         <div class = 'end'>
           <p>
-              The Portico Library is members only, but the gallery is open to 
-              the public most of the time. Best to check their 
+              The Portico Library is members only, but the gallery is open to the public most of the time. Best to check their 
               <a href="http://www.theportico.org.uk/visit-us">website</a> 
               and maybe call ahead if you are planning to visit.
           </p>
           <p>
               Chetham’s Library is 
               <a href="http://library.chethams.com/about/visiting/">open</a> 
-              to the public year round. Hopefully 
-              your trip will be more successful than ours.
+              to the public year round. Hopefully your trip will be more successful than ours.
           </p>
           <p>
-              CAMRA are running what looks to be an excellent tour around 
-              breweries in Salford this Saturday, check their
+              CAMRA are running what looks to be an excellent tour around breweries in Salford this Saturday, check their
               <a href="https://www.salford.camra.org.uk/">website</a>
-              for more details. Tickets are £5 and do 
-              not include the price of drinks.
+              for more details. Tickets are £5 and do not include the price of drinks.
           </p>
         </div>
+    </div>
+
+    <div class='bulk'>
+        <section class='container'>
+            <h3>festival of the spoken nerd - just for graphs, review.</h3>
+            <p>
+            The Manchester Science Festival is drawing to a close, and it’s made me remember why I chose to study science at university. Now that I am a grown up with an unremarkable desk job, learning about this stuff again after forgetting it all the first time feels a bit like coming home after a long day. I can enjoy the good bits without stressing out that I don’t understand the formula that has taken the lecturer a whole semester to derive (seriously). Honestly though, I’ve mostly missed the puns. The scientific community loves a good pun.
+            </p>
+            <figure>
+                    <img src="images/Spoken Nerd.jpg" alt="Nerd Graph">
+                    <figcaption>Photo Credit - Kitty Walker,
+                    <a href="http://festivalofthespokennerd.com/press/">via<a></figcaption>
+            </figure>
+            <p>
+            Festival of the Spoken Nerd is everything you thought learning science would be when you were eight years old and being raised on a steady diet of Nickelodeon’s American teen shows. There are self-plotting formulae, a song that may be the first thing to tempt me to watch the musical Wicked (Defining Gravity, anyone?) and, of course, fire graphs. Graphs made out of fire. I’ll let that sink in. If you want to get young people into STEM subjects, I guarantee this is the way to do it.
+            </p>
+            <figure>
+              <img src="images/Fire Waves.jpg" alt="Standing Fire Waves">
+              <figcaption>Better standing waves than this are achieved, I promise. Photo Credit - 
+              <a href="http://www.aliceboreasphotography.com/">Mihaela Bodlovic<a></figcaption>
+            </figure>
+            <p>The trio is made up of Steve Mould - physicist with pyromaniacal tendencies, Matt Parker, whose wide-eyed love of maths makes you excited about magic squares, and Helen Arney; scientific songstress, fighting ignorance armed only with her trusty ukulele. It takes people with a sincere passion for the subject matter to make it at all accessible for those who would rather not classify themselves as nerds, and these three are so absolutely in love with science you can’t help but be buoyed along in the tide of their enthusiasm.</p>
+            <p>Anyone who doubts the hilarity of a good graph should prepare to be schooled.</p>   
+            <div class = 'end'>
+                  <p>
+                    If you’re willing to travel a bit, the closest place you can
+                    <a href="http://festivalofthespokennerd.com/tickets/">catch Just for Graphs</a>
+                    at The Leadmill in Sheffield on 18th November.
+                  </p>
+            </div>
     </div>
 
     <script src='js/index.js'></script>
