--- a/contact.html
+++ b/contact.html
@@ -9,23 +9,18 @@
     <link rel='bootstrap' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'/>
 </head>
 <body>
-    <div class="row">
-            <nav class="col-sm-4">
-                <a href='/Users/caitlinstansfield/Northcoders/precourse-section-3/index.html'>home.</a>
-                <a href='/Users/caitlinstansfield/Northcoders/precourse-section-3/links.html'>links.</a>
-                <a href='/Users/caitlinstansfield/Northcoders/precourse-section-3/contact.html'>contact.</a>
-            </nav>
-    </div>
-    <header class='container'>
-         <section class="jumbotron">
-            <div class="container">
-                <div class="row text-center">
-                    <h1>pluviambulist.</h1>
+        <header class='container'>  
+                <div class='row'>
+                        <h1 class='col-sm-4'>pluviambulist.</h1>
+                        <nav class='col-sm-4'>
+                            <a href='/Users/caitlinstansfield/Northcoders/precourse-section-3/index.html'>home.</a>
+                            <a href='/Users/caitlinstansfield/Northcoders/precourse-section-3/contact.html'>contact.</a>
+                        </nav>
                 </div>
-            </div>
-          </section>
-    </header>
-
+              </header>
+            
+                
+              <section class='jumbotron'></section>
 
 
     <script src='js/index.js'></script>
