Adding contact form

--- a/contact.html
+++ b/contact.html
@@ -17,10 +17,32 @@
                             <a href='/Users/caitlinstansfield/Northcoders/precourse-section-3/contact.html'>contact.</a>
                         </nav>
                 </div>
-              </header>
+         </header>
             
-                
-              <section class='jumbotron'></section>
+        <section class='jumbotron'></section>
+
+       <div class='bulk'>
+          <section class='container'>
+            <h3>contact.</h3>
+            <form action="mailto:stansfield.c.r@gmail.com">
+                <div class='row'>
+                    <p class='col-sm-2'> Name:</p>
+                    <input class='col-sm-2' id="name" type="text">
+                </div>
+                <div class='row'>
+                    <p class='col-sm-2'>Email:</p>
+                    <input class='col-sm-2' id="email" type="email">
+                </div>
+                <div class="row">
+                    <p class='col-sm-2'>Message:</p>
+                    <input class='col-sm-2' id="message" type="text">
+                </div>
+                <br>
+                <input class='col-sm-2' id="submitbutton" type="submit">
+            </form>
+
+        </section>
+        </div>
 
 
     <script src='js/index.js'></script>
