--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
        <div class='bulk'>
           <section class='container'>
             <h3>contact.</h3>
-            <form method="post" action="mailto:stansfield.c.r@gmail.com">
+            <form method="post" action="mailto:stansfield.c.r@gmail.com" enctype="text/plain">
                 <div class='row'>
                     <p class='col-sm-2'> Name:</p>
                     <input class='col-sm-2' id="name" type="text">
