--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div class='row'>
             <h1 class='col-sm-4'>pluviambulist.</h1>
             <nav class='col-sm-4'>
-                <a href='/Users/caitlinstansfield/Northcoders/precourse-section-3/index.html'>home.</a>
-                <a href='/Users/caitlinstansfield/Northcoders/precourse-section-3/contact.html'>contact.</a>
+                <a href='https://schmaits.github.io/'>home.</a>
+                <a href='https://schmaits.github.io/contact.html'>contact.</a>
             </nav>
     </div>
   </header>
